# UseKotlin

./: build.gradle  settings.gradle  tradekey
app/: build.gradle
app/release/: trade-1.0.1.apk  trade-1.0.2.apk
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: check_box_compass.xml  shape_login_input_bg.xml  tag_bg.xml  tag_checked_normal.xml  tag_normal.xml  trade_gray_full.xml  trade_red_corner_full.xml  trade_white_button.xml
app/src/main/res/layout/: aa.xml  activity_account_list.xml  activity_change_pwd.xml  activity_information_change.xml  activity_ipo_order.xml  activity_main.xml  activity_menu.xml  activity_pre.xml  activity_query_trade.xml  activity_risk_query.xml  activity_risk_test.xml  activity_test.xml  activity_trade.xml  activity_trade_both.xml  activity_trade_trans.xml  activity_transfer_bank.xml  activity_transfer_broker.xml  activity_transfer_funds.xml  activity_transfer_menu.xml  fragment_buy.xml  fragment_level.xml  fragment_menu.xml  fragment_order.xml  fragment_order_1.xml  fragment_sell.xml  fragment_test.xml  fragment_trade_agree.xml  holder_hold_stock.xml  toolbar_normal.xml  trade_activity_new_order.xml  trade_activity_new_order1.xml  trade_fragment_datepicker.xml  trade_fragment_login.xml  trade_holder_daijiao.xml  trade_holder_daijiao_title.xml  trade_holder_deal.xml  trade_holder_deal_title.xml  trade_holder_entrust.xml  trade_holder_entrust_title.xml  trade_holder_new_stock.xml  (+25 more)
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
net/: build.gradle
net/src/main/: AndroidManifest.xml
net/src/main/cpp/: CMakeLists.txt  GenerateKey.cpp  GenerateKey.h  Packet_Tools.cpp  Packet_Tools.h  Packet_TradeBase.h  Packet_TradeData.h  Packet_TradeGate.h  Packet_VerificationCode.h  TRC4.cpp  TRC4.h  ZlibDll.cpp  ZlibDll.h  cBase64.cpp  cBase64.h  cJSON.h  native-lib.cpp  stdafx.h
trade/: build.gradle
trade/src/main/: AndroidManifest.xml
trade/src/main/cpp/: CMakeLists.txt  GenerateKey.cpp  GenerateKey.h  ZlibDll.cpp  ZlibDll.h  aes.h  aes_locl.h  aes_x86core.c  native-jni.cpp  ndk-helper.cpp  ndk-helper.h
trade/src/main/res/drawable/: check_box_compass.xml  drawable_horizontal_progress_bar.xml  drawable_indeterminate_horizontal_progress_bar.xml  line_light_1px.xml  line_light_hor_1px.xml  shape_white_bg_corner13.xml  trade_blue_corner_full.xml  trade_gray_corner_border.xml  trade_gray_full.xml  trade_input_bg_blue.xml  trade_input_white_bg.xml  (+3 more)
(+494 files in other folders)
